# molmodel

./: CMakeLists.txt  Makefile  README.md  io
dat/: v1  v2
include/: acid.hpp  acidana.hpp  apattern.hpp  array.h  atom.hpp  avgmf.hpp  bcifit.hpp  bcond.hpp  bcondtype.h  blockstr.hpp  boo.hpp  callback.hpp  cgmin.h  cheby.h  checkgr.hpp  cmmsd.hpp  cmplx.hpp  cmpole.hpp  constraint.hpp  contact.hpp  covalent.hpp  cvec.hpp  dmat.hpp  dvec.hpp  eleclj.hpp  espfit.hpp  euler.hpp  fmacro.h  geohist.hpp  harmonic.hpp  hash.h  hist.hpp  hset.hpp  htab.hpp  intra.hpp  kspace.h  lapack.hpp  linalg.h  linalg.hpp  lst.hpp  (+30 more)
src/: .msys.cpp.swp  Makefile  acid.cpp  acidana.cpp  apattern.cpp  array.c  atom.cpp  avgmf.cpp  bcifit.cpp  bcond.cpp  bcondtype.cpp  callback.cpp  cart.h  cgmin.c  cheby.c  checkgr.cpp  cmmsd.cpp  constraint.cpp  contact.cpp  coord.h  covalent.cpp  eleclj.cpp  espfit.cpp  euler.cpp  fns.c  fns.h  geograd.cpp  geograd.h  geohist.cpp  geoprog.C  geoprog.cpp  harmonic.cpp  hist.cpp  histoprog.cpp  intra.cpp  kspace.c  lapack.cpp  linalg.cpp  mdyn.cpp  mmin.cpp  (+21 more)
